test/files/neg/xmltruncated7.scala
object Test {
  <p>foo}: </p>
}