test/files/neg/xmltruncated7.check
xmltruncated7.scala:2: error: in XML literal: in XML content, please use '}}' to express '}'
  <p>foo}: </p>
        ^
xmltruncated7.scala:2: error:  I encountered a '}' where I didn't expect one, maybe this tag isn't closed <p>
  <p>foo}: </p>
   ^
two errors found
